stylesheet.css
/* ... */
    .drop-choices a.choice:hover { background: #eee; }
    #sr-more-link { background: #f5fafe; }
    #srLeftContainer { padding-left: 0!important; margin-right: 10px!important; }

    .res #sr-header-area { border-bottom: 0; background: #252829; }
    .res #sr-header-area:hover a { color: #d3d3d3; }
    .res #srList { padding: 3px; top: 18px; left: 9px; border: none; background-color: #252829; color: #aaa; }
    .res #srList tr { border-bottom:none; }
    .res #srList tr:hover{ background-color:#eee; }
    .res #srList td a { width: 100%; display: block; color: #fff!important; text-transform: uppercase; }
    .res #srList td a:hover { color: #333!important; }

    #RESShortcutsSort { text-indent: -9999px; background: url(%%q-dark%%) -167px -43px no-repeat!important; opacity: .7; }
    #RESShortcutsRight { text-indent: -9999px; background: url(%%q-dark%%) -247px -82px no-repeat!important; opacity: .7; }
    #RESShortcutsLeft { text-indent: -9999px; background: url(%%q-dark%%) -247px -54px no-repeat!important; opacity: .7; }
    #RESShortcutsAdd { text-indent: -9999px; background: url(%%q-dark%%) -141px -54px no-repeat!important; opacity: .7; }

    #RESShortcutsSort:hover { opacity: 1; }
    #RESShortcutsRight:hover { opacity: 1; }
    #RESShortcutsLeft:hover { opacity: 1; }
    #RESShortcutsLeft:hover { opacity: 1; }
    #RESShortcutsAdd:hover { opacity: 1; }

    #sr-header-area a.RESShortcutsCurrentSub { color: #FF3D73!important; }

/* Logos etc */
    #header-img { margin: 10px 5px 0 15px; }
    body.with-listing-chooser #header .pagename { position: absolute; top: 54px; }

/* Tab Menu */
    #header:after {
        content: "";
        padding-left: 15px;
        height: 40px;
        margin : 0;
        display: block;
        background: #383c3e;
        line-height: 40px;
        font-family: sans-serif;
        font-size: 11px;
        font-weight: bold;
        text-transform: uppercase;
        color: #CCC;
        -webkit-box-shadow: 0 8px 6px -6px rgba(0,0,0,0.3);
           -moz-box-shadow: 0 8px 6px -6px rgba(0,0,0,0.3);
                box-shadow: 0 8px 6px -6px rgba(0,0,0,0.3); }

    #header-bottom-left .tabmenu {
        position: absolute;
        left: 11px;
        height: 40px;
        margin-top: 0; }

    #header-bottom-left .tabmenu  { top: 72px; }
    .res #header-bottom-left .tabmenu { top: 71px; }
    #header-bottom-left .tabmenu li { margin: 0px 0px; }

    #header-bottom-left .tabmenu li a {
        background: transparent;
        font-family: sans-serif;
        font-size: 10px;
        padding: 11px 8px 10px 8px;
        font-weight: 600;
        text-transform: uppercase;
        color: #828c90;
        line-height: 40px;
        -webkit-transition: 0.1s ease-in-out;
           -moz-transition: 0.1s ease-in-out;
             -o-transition: 0.1s ease-in-out;
                transition: 0.1s ease-in-out; }

    #header-bottom-left .tabmenu li a:hover { background: #c12666; }

    #header-bottom-left .tabmenu li.selected a,#header-bottom-left .tabmenu li a:hover {
        position: relative;
        border: none;
        color: #fff;
        background: #85A09E; }

    #header-bottom-left .tabmenu li.selected a:after {
        top: 100%;
        left: 50%;
        border: solid transparent;
        content: " ";
        height: 0;
        width: 0;
        position: absolute;
        pointer-events: none;
        border-color: rgba(52, 152, 219, 0);
        border-top-color: #85A09E;
        border-width: 10px;
        margin-left: -10px; }

    #header-bottom-left .tabmenu li a:hover { padding: 11px 8px 10px 8px; }
    #header-bottom-left .tabmenu li.selected a, #header-bottom-left .tabmenu li.selected a:hover { font-size: 11px; padding: 10px 8px; }

/* Userbar */
    #header-bottom-right,
    .res #header-bottom-right {
        position: absolute;
        top: 71px;
        background: transparent;
        padding: 0 0 0 10px;
        height: 40px;
        line-height: 40px;
        border-radius: 0;
        z-index: 220; }

    #header-bottom-right a,
    #header-bottom-right .user,
    #header-bottom-right .separator { color: #828c90; }
    .res #userbarToggle {
        min-height: 40px;
        padding: 0;
        border-radius: 0;
        color: #fff;
        background: #414648;
        border: 0;
        text-align: center;
        line-height: 40px; }

    #header-bottom-right .separator,
    .res #header-bottom-right .separator { display: none!important; }
    #header-bottom-right #userbarToggle + * { margin-left: 0!important; }

    #header-bottom-right .user {
        position: absolute;
        top: -35px;
        right: 0;
        text-align: right;
        min-width: 300px;
        padding-right: 10px;
        line-height: 35px; }

    #header-bottom-right .user .userkarma { border-bottom: 0; color: #828c90; }
    #header-bottom-right #mail,
    .res #header-bottom-right #mail { top: 0!important; height: 40px; width: 35px!important; }
    #header-bottom-right #mail.nohavemail,
    #header-bottom-right #mail.havemail { background: url(%%q-dark%%) -225px -141px no-repeat; border-right: 1px solid rgba(225,255,255,.25);  }
    #header-bottom-right #mail.havemail { background-color: #FF7500; }

    #header-bottom-right #modmail {
        margin: 0;
        top: 0;
        width: 35px;
        height: 40px;
        border-right: 1px solid rgba(225,255,255,.25); }

    #header-bottom-right #modmail.havemail { background: url(%%q-dark%%) -180px -141px no-repeat #ff4500; }
    #header-bottom-right #modmail.nohavemail { background: url(%%q-dark%%) -5px -191px no-repeat; }
    #header-bottom-right .flat-list, .loggedin .logout { display: inline-block; vertical-align: top; }

    #header-bottom-right a.pref-lang, .loggedin .logout a {
        background: url(%%q-dark%%) -154px -191px no-repeat;
        width: 35px;
        height: 40px;
        display: inline-block;
        text-indent: -9999px;
        margin: 0px; }
/* ... */

